<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <android.support.v7.widget.Toolbar
        android:id="@+id/create_meeting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.03">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">


            <TextView
                android:id="@+id/nameTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/meeting_name"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/meeting_name"
                android:layout_marginEnd="8dp"
                tools:layout_editor_absoluteX="193dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/dateTV"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/date"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:layout_marginStart="16dp"
                tools:layout_editor_absoluteY="67dp"
                tools:layout_editor_absoluteX="7dp"
                android:layout_weight="0.75" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/date"
                    android:layout_width="178dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="9dp"
                    android:layout_weight="0.53"
                    android:ems="10"
                    android:focusable="false"
                    android:inputType="date"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <Button
                    android:id="@+id/pickDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="0dp"
                    android:onClick="showTimePickerDialog"
                    android:text="@string/date"
                    app:layout_constraintHorizontal_bias="0.333"
                    app:layout_constraintLeft_toRightOf="@+id/date"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    android:layout_weight="0.43" />
             </LinearLayout>

            

            <TextView
                android:id="@+id/hourTV"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="@string/hour"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="13dp"
                app:layout_constraintTop_toBottomOf="@+id/dateTV"
                app:layout_constraintRight_toLeftOf="@+id/hour"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.0" />
        
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/hour"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:ems="10"
                    android:inputType="time"
                    android:layout_marginEnd="8dp"
                    tools:layout_editor_absoluteY="120dp"
                    tools:layout_editor_absoluteX="116dp"
                    android:layout_weight="0.93" />

                <Button
                    android:id="@+id/pickHour"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:onClick="showTimePickerDialog"
                    android:text="@string/hour"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pickDate" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                        android:id="@+id/levelTV"
                        android:layout_width="170dp"
                        android:layout_height="43dp"
                        android:text="@string/minimum_level"
                        android:textAppearance="@android:style/TextAppearance.Material.Large"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="9dp"
                        app:layout_constraintTop_toBottomOf="@+id/hourTV"
                        android:layout_marginLeft="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/level"
                        android:layout_marginRight="8dp"
                        app:layout_constraintHorizontal_bias="0.0" />

                <EditText
                    android:id="@+id/level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:layout_marginStart="31dp"
                    android:layout_marginEnd="8dp"
                    tools:layout_editor_absoluteX="193dp"
                    android:layout_marginTop="9dp"
                    app:layout_constraintTop_toBottomOf="@+id/hour" />
             </LinearLayout>

            <TextView
                android:id="@+id/descriptionTV"
                android:layout_width="387dp"
                android:layout_height="42dp"
                android:text="@string/meeting_description"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:layout_marginStart="16dp"
                tools:layout_editor_absoluteY="220dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="122dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:inputType="textMultiLine"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTV" />

            <TextView
                android:id="@+id/locationTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meeting_location"
                android:textAppearance="@android:style/TextAppearance.Material.Large" />

            <fragment
                android:id="@+id/mapView"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="187dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <EditText
                android:id="@+id/meetingLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPostalAddress" />

            <Button
                android:id="@+id/create"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:onClick="create"
                android:text="@string/create_button"
                android:layout_marginBottom="59dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.497" />

            

        </LinearLayout>
    </ScrollView>
</LinearLayout>