...
    <string name="location_button">Location</string>
    <string name="public_friends">Do you want to add some friends in this meeting?</string>
    <string name="private_friends">Do you want to run with friends, or alone?</string>
    <string name="public_yes_friends">Yes, I want to add friends</string>
    <string name="public_no_friends">No, just create it</string>
    <string name="private_yes_friends">I want to add friends</string>
    <string name="private_no_friends">I want to run alone</string>

    <string name="edit_meeting_close_dialog_message">Are you sure you want to close without saving?</string>
    <string name="edit_meeting_close_dialog_title">Closing without saving</string>
    <string name="friend_request_dialog_message">Are you sure you want to send a friend request to</string>
    <string name="friend_request_dialog_title">Friend request</string>
    <string name="delete_friend_dialog_message">Are you sure you want to stop being friends with</string>
...

    <string name="chat_delete_chat_message">Are you sure you want to delete this chat?</string>
    <string name="chat_delete_chat_title">Delete chat</string>

    <string name="chat_friend_dialog_message">Are you sure you want to send a message to</string>
    <string name="chat_friend_dialog_title">Chat with</string>
    <string name="ok">OK</string>
    <string name="accept_request">Send request</string>
    <string name="cancel">Cancel</string>
    <string name="is_public">Public</string>
    <string name="edit_meeting_error_dialog_title">Error editing the Meeting</string>
    <string name="edit_meeting_error_dialog_message">There was an error while processing the edited Meeting, check if the values are correct!</string>
    <string name="level">Level</string>
...
