<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/done_button"
        android:icon="@drawable/ic_done"
        android:title="Done"
        app:showAsAction="always|withText" />
</menu>